--- a/nginx/basic-nginx/html/index.html
+++ b/nginx/basic-nginx/html/index.html
@@ -6,9 +6,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<h1 class="text-3xl font-bold underline">
-    Basic Nginx Example
-</h1>
+<div class="container mx-auto mt-2">
+    <h1 class="text-xl">
+        Basic Nginx Example
+    </h1>
+</div>
 </body>
 </html>
 
